Correccion de devolucion de rutas de imagenes